--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,18 @@
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.9",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
